update deps and update content to chapter 5